# gst-MyProject

./: CMakeLists.txt  README  configure.ac  meson.build
apps/: CMakeLists.txt
plugins/: CMakeLists.txt  Makefile.am  config.h  gstMyProject.c  gstMyProject.h  gstMyProjectplugin.c  meson.build
tools/: Makefile.am  meson.build
