plugin_LTLIBRARIES = libgstMyProject.la

# sources used to compile this plug-in
libgstMyProject_la_SOURCES = gstMyProjectplugin.c gstMyProject.c gstMyProject.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstMyProject_la_CFLAGS = $(GST_CFLAGS)
libgstMyProject_la_LIBADD = $(GST_LIBS)
libgstMyProject_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

